# FlingSolver

./: Fling.cabal  Fling.hs  LICENSE  Makefile
